Finalise paper for resubmission

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -43,7 +43,7 @@ $^{2}$Institute for Theory \& Computation,
   surface due to the binary's orbital motion.  When the binary enters
   the GW phase of its evolution, the opening angle widens, the jet
   exhibits milliarcsecond scale wiggles, and the conical surface of
-  jet precession is twisted due to apparant superluminal motion.  The
+  jet precession is twisted due to apparent superluminal motion.  The
   rapidly increasing orbital velocity of the binary gives the jet an
   appearance of a ``chirp.''  This helical chirping morphology of the
   jet can be used to infer the binary parameters.  For binaries with
@@ -63,7 +63,7 @@ $^{2}$Institute for Theory \& Computation,
 \label{sec:intro}
 
 Binaries of supermassive black holes (BHs) arise naturally as a result
-of mergers of galaxies in the context of heirarchical galaxy formation
+of mergers of galaxies in the context of hierarchical galaxy formation
 \citep{2000MNRAS.311..576K, 2002MNRAS.336L..61H, 2008ApJ...676...33D,
   2012MNRAS.422.1306K}.  After a galaxy merger, infalling black holes
 lose their angular momentum in three stages before coalescence
@@ -77,7 +77,7 @@ evolution, emission of gravitational waves (GWs) becomes the
 predominant mode of angular momentum loss, which results in the
 coalescence of the black holes.
 
-General relativisitic (GR) numerical simulations can predict the
+General relativistic (GR) numerical simulations can predict the
 binary's evolution in its final stage up to coalescence
 \citep{2005PhRvL..95l1101P, 2006PhRvL..96k1102B, 2006PhRvL..96k1101C}.
 This has stimulated interest in predicting related electromagnetic
@@ -298,7 +298,7 @@ Note that the separation is dependent on the gas accretion rate.
     the orbital motion, the net red velocity vector oscillates around
     the solid black vector and produces a conical surface with $\psi$
     as its half-opening angle.  Note that $v_\mathrm{orb}$ is
-    exagerated here.  In practice, $v_\mathrm{orb}\ll
+    exaggerated here.  In practice, $v_\mathrm{orb}\ll
     v_\mathrm{jet}\sim c$.  The figure indicates that
     $\sin{\psi}\sim\tan{\psi}=v_\mathrm{orb}\cos{\chi}/v_\mathrm{jet}$.}
   \label{fig:jet}
@@ -403,7 +403,7 @@ which this happens reflects the binary's dynamical evolution.
   figure shows the position of many jet particles observed at a fixed
   time on Earth.)  We have assumed $i=40^\circ$, $\beta=0.9$, and
   angular diameter distance $d = 100$~Mpc.  The jets are twisted
-  because of the apparant superluminal motion.  Also evident is the
+  because of the apparent superluminal motion.  Also evident is the
   opening of the jet and the radio jet chirp.  Right panel shows
   normalised brightness of the inner 30~mas region of the forward
   jet. (This panel shows the intensity of many particles observed at a
@@ -469,7 +469,7 @@ We assume $\delta=1$ and $\alpha=1$, hereafter
 \section{Jet Morphology}
 
 As the binary evolves, the combination of increasing orbital speed and
-the apparant superluminal motion effect results in a jet morphology
+the apparent superluminal motion effect results in a jet morphology
 with an increasing opening angle and increasingly rapid periodic
 variation, together with a twisted shape.
 Figure~\ref{fig:jet_mdot1.0} shows these three features for an
@@ -481,25 +481,25 @@ stretches on the sky while the backward jet is compressed due to the
 apparent superluminal motion.  The right panel of
 Figure~\ref{fig:jet_mdot1.0} zooms into the inner region of the
 forward jet and shows that the binary creates wiggles in the jet
-morphology of the order of a milli-arcsecond.  The duration of the
+morphology of the order of a milliarcsecond.  The duration of the
 binary evolution captured by Figure~\ref{fig:jet_mdot1.0} is 100 yr.
 Although the system can be rescaled to different masses, times, and
 separation, the initial separation in Figure~\ref{fig:jet_mdot1.0} is
 $\sim 10^{-3}$~pc, when the binary enters it GW-dominated phase.
 
 The increasing orbital speed of the binary leads to an increase in the
-jet's precession angular velocity.  This increases the helicity of the
-jet such that the jet is wound up increasingly tightly closer to the
-source.  This gives rise to a ``chirping'' morphology as seen in
-Figure~\ref{fig:jet_mdot1.0}.  The chirp is easier to resolve in jets
-that are closer to the line of sight, where superluminal motion can
-magnify the forward jet.  A chirping black hole is an unambiguous
+jet's precession angular velocity.  This increases the helical winding
+of the jet such that the jet is wound up increasingly tightly closer
+to the source.  This gives rise to a ``chirping'' morphology as seen
+in Figure~\ref{fig:jet_mdot1.0}.  The chirp is easier to resolve in
+jets that are closer to the line of sight, where superluminal motion
+can magnify the forward jet.  A chirping black hole is an unambiguous
 signature of a rapidly evolving binary BH system; the chirp is direct
 reflection of the orbital velocity evolution of the binary. Together,
 the three features of the jet morphology in
 Figure~\ref{fig:jet_mdot1.0} are:
 \begin{itemize}
-\item Increase in the helicity of the jet towards the central source (``chirpyness''),
+\item Increase in the helical winding of the jet towards the central source (``chirpyness''),
 \item Widening of the opening angle towards the central source, and 
 \item An apparant variation in the jet precession axis towards the central source (``twist''). 
 \end{itemize}
@@ -507,10 +507,10 @@ These directly probe the dynamics of the binary in its GW phase.
 
 \subsection{Can chirping jets be observed?}
 
-Observations of such a milliarc second scale geometry with the three
+Observations of such a milliarcsecond scale geometry with the three
 features described above can thus flag a BH binary nearing the end of
 its merger.  We now consider the question of whether such morphologies
-will be measurable in real observations. 
+will be measurable in real observations.
 
 As discussed in Section~\ref{sec:intro}, several helical jets have
 been observed thanks to VLBI.  A resolution of few tens of microarc
@@ -519,11 +519,11 @@ sensitivity of up to 30 $\mu$Jy$/$beam, as demonstrated by the MOJAVE
 survey \citep{2009AJ....138.1874L}.  VLA has angular resolution of few
 tens of milliarcsecconds with a sensitivity of about 100
 $\mu$Jy$/$beam.  The European VLBI network (EVN) which can resolve up
-to 0.13 milliarc seconds and can detect surface brightness down to 19
+to 0.13 milliarcseconds and can detect surface brightness down to 19
 $\mu$Jy$/$beam.  The Very Large Array (VLA) has an angular resolution
 of few tens of milliarcsecconds with a sensitivity of about 100
 $\mu$Jy$/$beam.  The future Square Kilometer Array (SKA) on its own
-will have 2 milliarc second resolution at around 10 GHz, but SKA will
+will have 2 milliarcsecond resolution at around 10 GHz, but SKA will
 be an order of magnitude more sensitive than current instruments with
 a sensitivity of about 50 nJy$/$beam.  Thus angular resolution of tens
 to hundreds of microarc seconds and flux sensitivity of a few
@@ -531,40 +531,62 @@ $\mu$Jy$/$beam is achievable with current VLBI instruments.
 
 The brighter part of the jet (intensity within factor of 10 from the
 maximum) in Figure~\ref{fig:jet_mdot1.0} (right panel) has separations
-of $\sim 1$ mas.  It should therefore be possible to resolve the jet
-at an angular resolution of $\sim 2$ mas.  (In the next section, we
-discuss an algorithm to fit the jet model to observational data.)  If
-it is aligned closer to the line of sight, the forward jet is
-magnified due to apparant superluminal motion.  This will make it
-possible to resolve jets of objects that are farther away than the
-example in Figure~\ref{fig:jet_mdot1.0}.  Binaries with higher masses
-have large orbital periods that will result in a helix with wider
-seperation between its cycles.  These objects would therefore be
-easier to detect.  We have not modelled the absolute surface
-brightness of jets, only relative variation in the jet brightness (as
-shown in Figure~\ref{fig:jet_mdot1.0}), but due to the $(1+z)^{-4}$
-dimming, it will be exceedingly difficult to detect such jets at
-higher redshifts.
+of $\sim 1$ mas.  Figure~\ref{fig:smooth_jet} shows inner 100 square
+mas of the jet in Figure~\ref{fig:jet_mdot1.0} smoothed at 200 $\mu$as
+and 2 mas respectively.  We find that at 200 $\mu$as resolution the
+chirp is clearly resolved.  At a lower resolution of 2 mas, the chirp
+is no longer resolved but widening of the jet opening angle can
+possibly be inferred.  (In the next section, we discuss an algorithm
+to fit the jet model to observational data.)  Note that other
+geometric effects can influence these conclusions.  If it is aligned
+closer to the line of sight, the forward jet is magnified due to
+apparant superluminal motion.  This will make it possible to resolve
+jets of objects that are farther away than the example in
+Figure~\ref{fig:jet_mdot1.0}.  Binaries with higher masses have large
+orbital periods that will result in a helix with wider separation
+between its cycles.  These objects would therefore be easier to
+detect.  We have not modeled the absolute surface brightness of jets,
+only relative variation in the jet brightness (as shown in
+Figure~\ref{fig:jet_mdot1.0}), but due to the $(1+z)^{-4}$ dimming, it
+will be exceedingly difficult to detect such jets at higher redshifts.
 
 We note here that there is at least one object in the literature that
 shows a jet morphology similar to Figure~\ref{fig:jet_mdot1.0}.  The
 quasar 4C 18.68 described by \citet{1982ApJ...253L...1G} shows a
 helical jet with an apparant opening angle that increases towards the
 central source from 11$^\circ$ to 45$^\circ$ in just two cycles
-\citet{1982ApJ...262..478G}.  The observing beamwidth of about 400 mas
+\citep{1982ApJ...262..478G}.  The observing beamwidth of about 400 mas
 makes it difficult to resolve a chirp in this source, but it is a
 prototype of the morphology that we are discussing here.
 \citet{2015MNRAS.453.1562G} have reported that 111 candidates show
-periodic variability in brightness in the Cataline Real-time Transient
+periodic variability in brightness in the Catalina Real-time Transient
 Survey, indicating presence of binary BHs.  An analysis of these
 candidates suggests the presence of circumbinary gas at small orbital
 distances \citep{2015MNRAS.453.1562G}.  This bodes well for the
 likelihood of the presence of chirpy jets.  In low resolution wide
-field survey, detecting modulations in the lightcurves would be an
+field surveys, detecting modulations in the light curves would be an
 easier diagnostic of a binary BH \citep{2011ApJ...743..136O,
   2011ApJ...734L..37K}.
 
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{cc}
+    % model.py 
+    \includegraphics*[width=\columnwidth]{jet_200muas.pdf} &
+    % model.py 
+    \includegraphics*[width=\columnwidth]{jet_2mas.pdf}
+  \end{tabular}
+\end{center}
+\caption{Central 100 square mas of the jet in
+  Figure~\ref{fig:jet_mdot1.0} smoothed at 200 $\mu$as (left panel)
+  and 2 mas (right panel) respectively.  The intensity is normalised
+  in arbitrary units.}
+\label{fig:smooth_jet}
+\end{figure*}
+
 \subsection{Deriving binary parameters from observations of chirping jets}
+\label{sec:geometric_model}
 
 From observations of chirping jets, we can infer the dynamical
 parameters of the binary BH by first fitting a purely geometric model
@@ -572,7 +594,7 @@ to the observed jet morphology.  To create a model of this kind, we
 generalise the simple helical model considered by
 \citet{2014MNRAS.445.1370K} and \citet{2001NewA....6...61N} to write
 \begin{align}
-  z &= x^{-\alpha} \frac{B}{2\pi} u \cos{u}, \\
+  z &= x^{-\alpha} \frac{B}{2\pi} u \cos{u}, \label{eqn:z}\\
   y &= x^{-\alpha} \frac{B}{2\pi} u \sin{u}, \\
   x &= \frac{A}{2\pi} u \left(\frac{u}{2\pi}\right)^\beta.
 \end{align}
@@ -583,7 +605,7 @@ widening opening angle of the jet, while the $(u/2\pi)^{\beta}$ term
 in the last equation parameterises the chirp.  This model can be
 fitted to an observed jet on the sky by using two rotation matrices,
 $\mathcal{R}_\lambda$ and $\mathcal{R}_i$, which rotate the model in
-the above equtions to match with the jet precession axis and the jet
+the above equations to match with the jet precession axis and the jet
 symmetry axis.  These matrices are given by
 
 \begin{flalign}
@@ -610,6 +632,7 @@ that $i$ and $\lambda$ vary with $x$.  Without loss of generality,
 we take this variation in $i$ and parameterise it as
 \begin{equation}
   i = \gamma x + i_0.
+  \label{eqn:i}
 \end{equation}
 We thus arrive at a model with 7 parameters ($\alpha$, $\beta$,
 $\gamma$, $A$, $B$, $i_0$, $\lambda_0$), which can be fitted to any
@@ -618,6 +641,34 @@ setting $\alpha$ and $\beta$ equal to $0$ yields the usual helical jet
 morphology, without the features discussed in this paper.  Thus, a
 non-zero value of these two parameters distinguishes chirpy jets from
 non-chirpy ones.
+
+\begin{figure*}
+\begin{center}
+  \includegraphics*[width=\textwidth]{triangle.pdf}
+\end{center}
+\caption{One and two dimensional projections of posterior probability
+  distributions of the 7-parameter geometric model described in
+  Section~\ref{sec:geometric_model} to mock data.  Wide, uniform
+  priors were chosen for all parameters.  The two-dimensional
+  projections also show that there are no parameter degeneracies in
+  the geometric model.  As described in the text, these parameter
+  values can then be used to derive various physical parameters
+  describing the black hole binary.}
+\label{fig:triangle}
+\end{figure*}
+
+Figure \ref{fig:triangle} shows how the geometric model of this
+section works in practice, by fitting it to mock data using Markov
+Chain Monte Carlo (MCMC).  We used the \texttt{emcee} package for this
+purpose \citep{2013PASP..125..306F}.  Mock data are created by using
+Equations~(\ref{eqn:z})--(\ref{eqn:i}) and then smoothing the
+resultant jet morphology by $\sim$ 2 mas.  Figure \ref{fig:triangle}
+shows posterior probability distributions of the parameters of our
+7-parameter model when it is fit to these mock data.  Wide, uniform
+priors were chosen for all parameters.  The posteriors demonstrate
+that there is no degeneracy in the geometric model parameters.  In
+fact the narrow ranges of values for which the posteriors are non-zero
+for each parameter show that the model fit the mock data very well.
 
 The best fit geometric parameters can then be used to derive the
 dynamical parameters of the BH binary in the following way.  The
@@ -628,7 +679,7 @@ yields a constraint on the quantity $a^4/M^3$ as a function of $P$ via
 Equations (\ref{eqn:period}), (\ref{eqn:shrink}) and
 (\ref{eqn:widen}).  The parameters $A$ and $\beta$, which quantify the
 chirp, can be used to directly infer the evolution of the binary
-separation as $da/dP$, which also contraints the quantity $a^4/M^3$
+separation as $da/dP$, which also constraints the quantity $a^4/M^3$
 via Equation~(\ref{eqn:shrink}). These two constraints can be used to
 determine $a(P)$ and $M$ separately.  Finally, the parameters
 $i_0$, $\lambda_0$, and $\gamma$ quantify the twist in the jet,
@@ -651,23 +702,23 @@ jet produced by a member of a binary that is entering its GW-induced
 phase of inspiral exhibits a distinct chirping morphology.  Jets in
 these binaries have a biconical morphology.  After the binary enters
 the GW phase, the opening angle of cone rapidly increases within a
-separation of tens of milli-arcseconds at a distance of $\sim
-100$~Mpc, depending on the angle that the jet makes relative to the
-line of sight.  In addition, the periodicity of the jet's motion on
-the conical surface increases with the orbital period of the binary in
+separation of tens of milliarcseconds at a distance of $\sim 100$~Mpc,
+depending on the angle that the jet makes relative to the line of
+sight.  In addition, the periodicity of the jet's motion on the
+conical surface increases with the orbital period of the binary in
 this stage of its evolution.  Finally, due to the apparent
 superluminal motion and the widening opening angle, the jet is twisted
 into a peculiar morphology.  The jet geometry can be used to infer the
 set of dynamical and geometrical parameters.
 
-Milli-arcsecond features can be resolved using long baseline radio
+Milliarcsecond features can be resolved using long baseline radio
 interferometry \citep{2001ChJAA...1..236Q}.  At higher redshifts, jets
 are fainter and the wiggles become more difficult to resolve.
 However, it might be possible to resolve binaries with very unequal
 mass ratios, eccentric orbits, or suitable inclinations.  The future
 Square Kilometer Array (SKA) should make microarcsecond resolution
 possible, which could increase the detection rate of these objects
-\citep{2014arXiv1412.5971P}.
+\citep{2015aska.confE.143P}.
 
 The jet morphology acts as an electromagnetic counterpart for chirping
 gravitational wave sources.  BH binaries are expected to be the
@@ -686,7 +737,7 @@ processes in the strong-field GR regime \citep{2005ApJ...629...15H}.
 \section*{Acknowledgments}
 
 We acknowledge helpful comments from the anonymous referee and useful
-discussions with Martin Haehnelt, Enrico Ramirez-Ruiz and Alberto
+discussions with Martin Haehnelt, Enrico Ramirez-Ruiz, and Alberto
 Rorai.  This work was supported in part by NSF grant AST-1312034 (for
 A.~L.) and by the FP7 ERC Advanced Grant Emergence-320596 (for G.~K.).
 
