--- a/Paper/refs.bib
+++ b/Paper/refs.bib
@@ -3501,38 +3501,38 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2014arXiv1412.5971P,
-   author = {{Paragi}, Z. and {Godfrey}, L. and {Reynolds}, C. and {Rioja}, M. and 
+@ARTICLE{2015aska.confE.143P,
+   author = {{Paragi}, Z. and {Godfrey}, L. and {Reynolds}, C. and {Rioja}, M.~J. and 
 	{Deller}, A. and {Zhang}, B. and {Gurvits}, L. and {Bietenholz}, M. and 
-	{Szomoru}, A. and {Bignall}, H. and {Boven}, P. and {Charlot}, P. and 
-	{Dodson}, R. and {Frey}, S. and {Garrett}, M. and {Imai}, H. and 
-	{Lobanov}, A. and {Reid}, M. and {Ros}, E. and {van Langevelde}, H. and 
-	{Zensus}, J.~A. and {Zheng}, X.~W. and {Alberdi}, A. and {Agudo}, I. and 
-	{An}, T. and {Argo}, M. and {Beswick}, R. and {Biggs}, A.~D. and 
-	{Brunthaler}, A. and {Campbell}, R.~M. and {Cimo}, G. and {Colomer}, F. and 
-	{Corbel}, S. and {Conway}, J. and {Cseh}, D. and {Deane}, R. and 
-	{Falcke}, H. and {Gabanyi}, K. and {Gawronski}, M. and {Gaylard}, M. and 
+	{Szomoru}, A. and {Bignall}, H.~E. and {Boven}, P. and {Charlot}, P. and 
+	{Dodson}, R. and {Frey}, S. and {Garrett}, M.~A. and {Imai}, H. and 
+	{Lobanov}, A. and {Reid}, M.~J. and {Ros}, E. and {van Langevelde}, H.~J. and 
+	{Zensus}, A.~J. and {Zheng}, X.~W. and {Alberdi}, A. and {Agudo}, I. and 
+	{An}, T. and {Argo}, M. and {Beswick}, R. and {Biggs}, A. and 
+	{Brunthaler}, A. and {Campbell}, B. and {Cimo}, G. and {Colomer}, F. and 
+	{Corbel}, S. and {Conway}, J.~E. and {Cseh}, D. and {Deane}, R. and 
+	{Falcke}, H.~D.~E. and {Gawronski}, M. and {Gaylard}, M. and 
 	{Giovannini}, G. and {Giroletti}, M. and {Goddi}, C. and {Goedhart}, S. and 
-	{Gomez}, J.~L. and {Gunn}, A. and {Jung}, T. and {Kharb}, P. and 
-	{Klockner}, H.-R. and {Kording}, E. and {Kovalev}, Y.~Y. and 
-	{Kunert-Bajraszewska}, M. and {Lindqvist}, M. and {Lister}, M. and 
-	{Mantovani}, F. and {Marti-Vidal}, I. and {Mezcua}, M. and {McKean}, J. and 
-	{Middelberg}, E. and {Miller-Jones}, J. and {Moldon}, J. and 
-	{Muxlow}, T. and {O'Brien}, T. and {P{\'e}rez-Torres}, M. and 
-	{Pogrebenko}, S. and {Quick}, J. and {Rushton}, A.~P. and {Schilizzi}, R. and 
-	{Smirnov}, O. and {Sohn}, B.~W. and {Surcis}, G. and {Taylor}, G. and 
-	{Tingay}, S. and {Tudose}, V. and {van der Horst}, A. and {van Leeuwen}, J. and 
-	{Venturi}, T. and {Vermeulen}, R. and {Vlemmings}, W. and {de Witt}, A. and 
-	{Wucknitz}, O. and {Yang}, J.},
+	{G{\'o}mez}, J.~L. and {Gunn}, A. and {Kharb}, P. and {Kloeckner}, H.~R. and 
+	{Koerding}, E. and {Kovalev}, Y. and {Kunert-Bajraszewska}, M. and 
+	{Lindqvist}, M. and {Lister}, M. and {Mantovani}, F. and {Marti-Vidal}, I. and 
+	{Mezcua}, M. and {McKean}, J. and {Middelberg}, E. and {Miller-Jones}, J.~C.~A. and 
+	{Moldon}, J. and {Muxlow}, T. and {O'Brien}, T. and {Perez-Torres}, M. and 
+	{Pogrebenko}, S.~V. and {Quick}, J. and {Rushton}, A. and {Schilizzi}, R. and 
+	{Smirnov}, O. and {Sohn}, B.~W. and {Surcis}, G. and {Taylor}, G.~B. and 
+	{Tingay}, S. and {Tudose}, V.~M. and {van der Horst}, A. and 
+	{van Leeuwen}, J. and {Venturi}, T. and {Vermeulen}, R. and 
+	{Vlemmings}, W.~H.~T. and {de Witt}, A. and {Wucknitz}, O. and 
+	{Yang}, J. and {Gab{\"a}nyi}, K. and {Jung}, T.},
     title = "{Very Long Baseline Interferometry with the SKA}",
-  journal = {ArXiv e-prints},
+  journal = {Advancing Astrophysics with the Square Kilometre Array (AASKA14)},
 archivePrefix = "arXiv",
    eprint = {1412.5971},
  primaryClass = "astro-ph.IM",
- keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
-     year = 2014,
-    month = dec,
-   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1412.5971P},
+     year = 2015,
+      eid = {143},
+    pages = {143},
+   adsurl = {http://adsabs.harvard.edu/abs/2015aska.confE.143P},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -4255,5 +4255,23 @@ archivePrefix = "arXiv",
     pages = {L37},
       doi = {10.1088/2041-8205/734/2/L37},
    adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...734L..37K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013PASP..125..306F,
+   author = {{Foreman-Mackey}, D. and {Hogg}, D.~W. and {Lang}, D. and {Goodman}, J.
+	},
+    title = "{emcee: The MCMC Hammer}",
+  journal = {\pasp},
+archivePrefix = "arXiv",
+   eprint = {1202.3665},
+ primaryClass = "astro-ph.IM",
+ keywords = {Data Analysis and Techniques},
+     year = 2013,
+    month = mar,
+   volume = 125,
+    pages = {306-312},
+      doi = {10.1086/670067},
+   adsurl = {http://adsabs.harvard.edu/abs/2013PASP..125..306F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
